<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.a7learn.expert.androidexpert.ViewsSampleActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_viewsSample_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_viewsSample_backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                app:srcCompat="@drawable/ic_arrow_back_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/iv_viewsSample_backButton"
                android:text="Android Simple Views"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp" />
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/button_viewsSample_saveInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_action_name"
        android:drawablePadding="20dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/colorAccent"
        android:text="@string/views_saveInformation"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/button_viewsSample_saveInformation"
        android:layout_below="@id/toolbar_viewsSample_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:src="@drawable/sample_profile_image" />

            <TextView
                android:id="@+id/tv_viewsSample_fullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:text="Saeed Shahini"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/primary_button_background"
                        android:paddingEnd="8dp"
                        android:paddingStart="8dp"
                        android:text="@string/views_editName"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/button_viewsSample_viewWebsite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/secondary_button_background"
                        android:paddingEnd="8dp"
                        android:paddingStart="8dp"
                        android:text="@string/views_viewWebSite"
                        android:textColor="@color/secondaryTextColor" />
                </LinearLayout>
            </FrameLayout>

            <EditText
                android:id="@+id/editText_viewsSample_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:hint="@string/views_enterYourFirstName"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editText_viewsSample_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:hint="@string/views_enterYourLastName"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/views_skills"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/views_android" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/views_ui" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/views_deepLearning" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/views_provinceCity"
                android:textColor="@color/secondaryTextColor"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/views_gilan" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/views_tehran" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/views_alborz" />
            </RadioGroup>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
